--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!DOCTYPE html><html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +13,7 @@
     h1, h2 {
       text-align: center;
     }
-    form, .cocktail-list, .quiz-section {
+    form, .cocktail-list, .quiz-section, .progress-section, .flashcard-section {
       max-width: 600px;
       margin: 1rem auto;
       background: white;
@@ -44,6 +43,20 @@
       border-bottom: 1px solid #ccc;
       padding-bottom: 1rem;
     }
+    .cocktail img {
+      max-width: 100%;
+      margin-top: 0.5rem;
+      border-radius: 10px;
+    }
+    .btn-row {
+      display: flex;
+      gap: 10px;
+      margin-top: 0.5rem;
+    }
+    .flashcard {
+      text-align: center;
+      margin-top: 1rem;
+    }
     @media (max-width: 600px) {
       body {
         margin: 0.5rem;
@@ -52,47 +65,73 @@
   </style>
 </head>
 <body>
-  <h1>Mon Carnet de Cocktails</h1>
-
-  <form id="cocktailForm">
+  <h1>Mon Carnet de Cocktails</h1>  <form id="cocktailForm">
     <label for="name">Nom du Cocktail :</label>
-    <input type="text" id="name" required>
+    <input type="text" id="name" required><label for="ingredients">Ingrédients :</label>
+<textarea id="ingredients" required></textarea>
 
-    <label for="ingredients">Ingrédients :</label>
-    <textarea id="ingredients" required></textarea>
+<label for="instructions">Instructions :</label>
+<textarea id="instructions" required></textarea>
 
-    <label for="instructions">Instructions :</label>
-    <textarea id="instructions" required></textarea>
+<label for="image">Lien de l'image (optionnel) :</label>
+<input type="url" id="image">
 
-    <button type="submit">Ajouter</button>
-  </form>
+<input type="hidden" id="editIndex">
+<button type="submit">Enregistrer</button>
 
-  <div class="cocktail-list" id="cocktailList"></div>
-
-  <div class="quiz-section">
+  </form>  <div class="progress-section" id="progress"></div>  <div class="cocktail-list" id="cocktailList"></div>  <div class="quiz-section">
     <h2>🎲 Quiz Cocktail</h2>
     <button onclick="startQuiz()">Lancer un quiz</button>
     <div id="quizArea" style="margin-top:1rem;"></div>
-  </div>
-
-  <script>
+  </div>  <div class="flashcard-section">
+    <h2>🧠 Entraînement Flashcard</h2>
+    <button onclick="startFlashcard()">Démarrer</button>
+    <div class="flashcard" id="flashcardArea"></div>
+  </div>  <script>
     const form = document.getElementById('cocktailForm');
     const list = document.getElementById('cocktailList');
     const quizArea = document.getElementById('quizArea');
+    const progressDiv = document.getElementById('progress');
+    const flashcardArea = document.getElementById('flashcardArea');
 
     function loadCocktails() {
       const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
+      const known = JSON.parse(localStorage.getItem('knownRecipes')) || {};
       list.innerHTML = '';
-      cocktails.forEach((cocktail) => {
+
+      cocktails.forEach((cocktail, index) => {
         const div = document.createElement('div');
         div.className = 'cocktail';
         div.innerHTML = `
           <h3>${cocktail.name}</h3>
+          ${cocktail.image ? `<img src="${cocktail.image}" alt="${cocktail.name}">` : ''}
           <p><strong>Ingrédients :</strong><br>${cocktail.ingredients.replace(/\n/g, '<br>')}</p>
           <p><strong>Instructions :</strong><br>${cocktail.instructions.replace(/\n/g, '<br>')}</p>
+          <div class="btn-row">
+            <button onclick="editCocktail(${index})">Modifier</button>
+            <button onclick="markAsKnown(${index})">${known[index] ? '✅ Connue' : 'Je connais'}</button>
+          </div>
         `;
         list.appendChild(div);
       });
+
+      updateProgress();
+    }
+
+    function updateProgress() {
+      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
+      const known = JSON.parse(localStorage.getItem('knownRecipes')) || {};
+      const total = cocktails.length;
+      const knownCount = Object.values(known).filter(Boolean).length;
+      const percent = total ? Math.round((knownCount / total) * 100) : 0;
+      progressDiv.innerHTML = `<h2>📊 Progression : ${knownCount} / ${total} cocktails connus (${percent}%)</h2>`;
+    }
+
+    function markAsKnown(index) {
+      const known = JSON.parse(localStorage.getItem('knownRecipes')) || {};
+      known[index] = !known[index];
+      localStorage.setItem('knownRecipes', JSON.stringify(known));
+      loadCocktails();
     }
 
     form.addEventListener('submit', (e) => {
@@ -100,17 +139,35 @@
       const name = document.getElementById('name').value.trim();
       const ingredients = document.getElementById('ingredients').value.trim();
       const instructions = document.getElementById('instructions').value.trim();
+      const image = document.getElementById('image').value.trim();
+      const editIndex = document.getElementById('editIndex').value;
 
-      if (!name || !ingredients || !instructions) return;
-
-      const newCocktail = { name, ingredients, instructions };
       const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-      cocktails.push(newCocktail);
-      localStorage.setItem('cocktails', JSON.stringify(cocktails));
 
+      const newCocktail = { name, ingredients, instructions, image };
+
+      if (editIndex) {
+        cocktails[editIndex] = newCocktail;
+        document.getElementById('editIndex').value = '';
+      } else {
+        cocktails.push(newCocktail);
+      }
+
+      localStorage.setItem('cocktails', JSON.stringify(cocktails));
       form.reset();
       loadCocktails();
     });
+
+    function editCocktail(index) {
+      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
+      const c = cocktails[index];
+      document.getElementById('name').value = c.name;
+      document.getElementById('ingredients').value = c.ingredients;
+      document.getElementById('instructions').value = c.instructions;
+      document.getElementById('image').value = c.image || '';
+      document.getElementById('editIndex').value = index;
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
 
     function startQuiz() {
       const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
@@ -122,22 +179,64 @@
       const cocktail = cocktails[randomIndex];
       quizArea.innerHTML = `
         <h3>Quels sont les ingrédients du <strong>${cocktail.name}</strong> ?</h3>
-        <textarea id="quizAnswer" rows="4" placeholder="Écris ta réponse ici..."></textarea>
-        <button onclick="checkQuiz('${cocktail.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Voir la réponse</button>
-        <div id="quizFeedback" style="margin-top:1rem;"></div>
-      `;
-    }
+        <textarea id="quizAnswer" rows="4" placeholder="Écris ta réponse ici..."></textarea><button onclick="checkQuiz('${cocktail.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Voir la réponse</button>
+    <div id="quizFeedback" style="margin-top:1rem;"></div>
+  `;
+}
 
-    function checkQuiz(correctAnswer) {
-      const userAnswer = document.getElementById('quizAnswer').value.trim();
-      const feedback = document.getElementById('quizFeedback');
-      feedback.innerHTML = `
-        <p><strong>Ta réponse :</strong><br>${userAnswer.replace(/\n/g, '<br>')}</p>
-        <p><strong>Bonne réponse :</strong><br>${correctAnswer.replace(/\\n/g, '<br>')}</p>
-      `;
-    }
+function checkQuiz(correctAnswer) {
+  const userAnswer = document.getElementById('quizAnswer').value.trim();
+  const feedback = document.getElementById('quizFeedback');
+  feedback.innerHTML = `
+    <p><strong>Ta réponse :</strong><br>${userAnswer.replace(/\n/g, '<br>')}</p>
+    <p><strong>Bonne réponse :</strong><br>${correctAnswer.replace(/\n/g, '<br>')}</p>
+  `;
+}
 
-    loadCocktails();
+let flashcardIndex = 0;
+function startFlashcard() {
+  const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
+  if (cocktails.length === 0) {
+    flashcardArea.innerHTML = '<p>Aucun cocktail enregistré.</p>';
+    return;
+  }
+  flashcardIndex = 0;
+  showFlashcard(cocktails);
+}
+
+function showFlashcard(cocktails) {
+  const c = cocktails[flashcardIndex];
+  flashcardArea.innerHTML = `
+    <h3>${c.name}</h3>
+    <button onclick="revealFlashcard('${c.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Afficher les ingrédients</button>
+    <div id="flashcardReveal"></div>
+    <div style="margin-top:1rem;">
+      <button onclick="nextFlashcard(${cocktails.length}, true)">✅ Je connaissais</button>
+      <button onclick="nextFlashcard(${cocktails.length}, false)">❌ Je ne connaissais pas</button>
+    </div>
+  `;
+}
+
+function revealFlashcard(ingredients) {
+  document.getElementById('flashcardReveal').innerHTML = `<p>${ingredients.replace(/\n/g, '<br>')}</p>`;
+}
+
+function nextFlashcard(total, known) {
+  const knownFlash = JSON.parse(localStorage.getItem('flashcardResults')) || { correct: 0, total: 0 };
+  knownFlash.total++;
+  if (known) knownFlash.correct++;
+  localStorage.setItem('flashcardResults', JSON.stringify(knownFlash));
+  const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
+  flashcardIndex++;
+  if (flashcardIndex >= total) {
+    flashcardArea.innerHTML = `<p>✅ ${knownFlash.correct} sur ${knownFlash.total} réponses correctes</p>`;
+  } else {
+    showFlashcard(cocktails);
+  }
+}
+
+loadCocktails();
+
   </script>
 </body>
 </html>
