--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,29 +66,42 @@
   </style>
 </head>
 <body>
-  <h1>Mon Carnet de Cocktails</h1>  <form id="cocktailForm">
+  <h1>Mon Carnet de Cocktails</h1>
+
+  <form id="cocktailForm">
     <label for="name">Nom du Cocktail :</label>
-    <input type="text" id="name" required><label for="ingredients">Ingrédients :</label>
-<textarea id="ingredients" required></textarea>
+    <input type="text" id="name" required>
 
-<label for="instructions">Instructions :</label>
-<textarea id="instructions" required></textarea>
+    <label for="ingredients">Ingrédients :</label>
+    <textarea id="ingredients" required></textarea>
 
-<label for="image">Lien de l'image (optionnel) :</label>
-<input type="url" id="image">
+    <label for="instructions">Instructions :</label>
+    <textarea id="instructions" required></textarea>
 
-<input type="hidden" id="editIndex">
-<button type="submit">Enregistrer</button>
+    <label for="image">Lien de l'image (optionnel) :</label>
+    <input type="url" id="image">
 
-  </form>  <div class="progress-section" id="progress"></div>  <div class="cocktail-list" id="cocktailList"></div>  <div class="quiz-section">
+    <input type="hidden" id="editIndex">
+    <button type="submit">Enregistrer</button>
+  </form>
+
+  <div class="progress-section" id="progress"></div>
+
+  <div class="cocktail-list" id="cocktailList"></div>
+
+  <div class="quiz-section">
     <h2>🎲 Quiz Cocktail</h2>
     <button onclick="startQuiz()">Lancer un quiz</button>
     <div id="quizArea" style="margin-top:1rem;"></div>
-  </div>  <div class="flashcard-section">
+  </div>
+
+  <div class="flashcard-section">
     <h2>🧠 Entraînement Flashcard</h2>
     <button onclick="startFlashcard()">Démarrer</button>
     <div class="flashcard" id="flashcardArea"></div>
-  </div>  <script>
+  </div>
+
+  <script>
     const form = document.getElementById('cocktailForm');
     const list = document.getElementById('cocktailList');
     const quizArea = document.getElementById('quizArea');
@@ -179,64 +193,64 @@
       const cocktail = cocktails[randomIndex];
       quizArea.innerHTML = `
         <h3>Quels sont les ingrédients du <strong>${cocktail.name}</strong> ?</h3>
-        <textarea id="quizAnswer" rows="4" placeholder="Écris ta réponse ici..."></textarea><button onclick="checkQuiz('${cocktail.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Voir la réponse</button>
-    <div id="quizFeedback" style="margin-top:1rem;"></div>
-  `;
-}
+        <textarea id="quizAnswer" rows="4" placeholder="Écris ta réponse ici..."></textarea>
+        <button onclick="checkQuiz('${cocktail.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Voir la réponse</button>
+        <div id="quizFeedback" style="margin-top:1rem;"></div>
+      `;
+    }
 
-function checkQuiz(correctAnswer) {
-  const userAnswer = document.getElementById('quizAnswer').value.trim();
-  const feedback = document.getElementById('quizFeedback');
-  feedback.innerHTML = `
-    <p><strong>Ta réponse :</strong><br>${userAnswer.replace(/\n/g, '<br>')}</p>
-    <p><strong>Bonne réponse :</strong><br>${correctAnswer.replace(/\n/g, '<br>')}</p>
-  `;
-}
+    function checkQuiz(correctAnswer) {
+      const userAnswer = document.getElementById('quizAnswer').value.trim();
+      const feedback = document.getElementById('quizFeedback');
+      feedback.innerHTML = `
+        <p><strong>Ta réponse :</strong><br>${userAnswer.replace(/\n/g, '<br>')}</p>
+        <p><strong>Bonne réponse :</strong><br>${correctAnswer.replace(/\n/g, '<br>')}</p>
+      `;
+    }
 
-let flashcardIndex = 0;
-function startFlashcard() {
-  const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-  if (cocktails.length === 0) {
-    flashcardArea.innerHTML = '<p>Aucun cocktail enregistré.</p>';
-    return;
-  }
-  flashcardIndex = 0;
-  showFlashcard(cocktails);
-}
+    let flashcardIndex = 0;
+    function startFlashcard() {
+      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
+      if (cocktails.length === 0) {
+        flashcardArea.innerHTML = '<p>Aucun cocktail enregistré.</p>';
+        return;
+      }
+      flashcardIndex = 0;
+      showFlashcard(cocktails);
+    }
 
-function showFlashcard(cocktails) {
-  const c = cocktails[flashcardIndex];
-  flashcardArea.innerHTML = `
-    <h3>${c.name}</h3>
-    <button onclick="revealFlashcard('${c.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Afficher les ingrédients</button>
-    <div id="flashcardReveal"></div>
-    <div style="margin-top:1rem;">
-      <button onclick="nextFlashcard(${cocktails.length}, true)">✅ Je connaissais</button>
-      <button onclick="nextFlashcard(${cocktails.length}, false)">❌ Je ne connaissais pas</button>
-    </div>
-  `;
-}
+    function showFlashcard(cocktails) {
+      const c = cocktails[flashcardIndex];
+      flashcardArea.innerHTML = `
+        <h3>${c.name}</h3>
+        <button onclick="revealFlashcard('${c.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Afficher les ingrédients</button>
+        <div id="flashcardReveal"></div>
+        <div style="margin-top:1rem;">
+          <button onclick="nextFlashcard(${cocktails.length}, true)">✅ Je connaissais</button>
+          <button onclick="nextFlashcard(${cocktails.length}, false)">❌ Je ne connaissais pas</button>
+        </div>
+      `;
+    }
 
-function revealFlashcard(ingredients) {
-  document.getElementById('flashcardReveal').innerHTML = `<p>${ingredients.replace(/\n/g, '<br>')}</p>`;
-}
+    function revealFlashcard(ingredients) {
+      document.getElementById('flashcardReveal').innerHTML = `<p>${ingredients.replace(/\n/g, '<br>')}</p>`;
+    }
 
-function nextFlashcard(total, known) {
-  const knownFlash = JSON.parse(localStorage.getItem('flashcardResults')) || { correct: 0, total: 0 };
-  knownFlash.total++;
-  if (known) knownFlash.correct++;
-  localStorage.setItem('flashcardResults', JSON.stringify(knownFlash));
-  const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-  flashcardIndex++;
-  if (flashcardIndex >= total) {
-    flashcardArea.innerHTML = `<p>✅ ${knownFlash.correct} sur ${knownFlash.total} réponses correctes</p>`;
-  } else {
-    showFlashcard(cocktails);
-  }
-}
+    function nextFlashcard(total, known) {
+      const knownFlash = JSON.parse(localStorage.getItem('flashcardResults')) || { correct: 0, total: 0 };
+      knownFlash.total++;
+      if (known) knownFlash.correct++;
+      localStorage.setItem('flashcardResults', JSON.stringify(knownFlash));
+      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
+      flashcardIndex++;
+      if (flashcardIndex >= total) {
+        flashcardArea.innerHTML = `<p>✅ ${knownFlash.correct} sur ${knownFlash.total} réponses correctes</p>`;
+      } else {
+        showFlashcard(cocktails);
+      }
+    }
 
-loadCocktails();
-
+    loadCocktails();
   </script>
 </body>
 </html>
