--- a/index.html
+++ b/index.html
@@ -1,256 +1,258 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon Carnet de Cocktails</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>🍸 Mon Carnet de Cocktails</title>
   <style>
+    :root {
+      --main-color: #ff6f61;
+      --accent-color: #ffd166;
+      --bg-color: #fef8f3;
+      --card-color: #fff;
+      --text-color: #333;
+    }
     body {
-      font-family: Arial, sans-serif;
-      margin: 1rem;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    form, .cocktail-list, .quiz-section, .progress-section, .flashcard-section {
-      max-width: 600px;
-      margin: 1rem auto;
-      background: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
       padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      background-color: var(--bg-color);
+      color: var(--text-color);
+    }
+    h1 {
+      text-align: center;
+      color: var(--main-color);
+      font-size: 2.2rem;
+      margin-bottom: 1rem;
+      animation: popIn 0.8s ease-out;
+    }
+    form,
+    .cocktail-list,
+    .quiz-section,
+    .progress-section,
+    .flashcard-section {
+      max-width: 700px;
+      margin: 1.5rem auto;
+      background: var(--card-color);
+      padding: 1.2rem;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
     }
     label {
       display: block;
-      margin-top: 0.5rem;
+      margin-top: 1rem;
+      font-weight: bold;
     }
-    input, textarea, button {
+    input,
+    textarea,
+    button {
       width: 100%;
-      padding: 0.6rem;
-      margin-top: 0.3rem;
+      padding: 0.8rem;
+      margin-top: 0.4rem;
       font-size: 1rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
     button {
-      background-color: #4CAF50;
+      background-color: var(--main-color);
       color: white;
+      font-weight: bold;
       border: none;
+      margin-top: 1rem;
+      transition: background-color 0.3s, transform 0.2s;
       cursor: pointer;
-      border-radius: 5px;
+    }
+    button:hover {
+      background-color: #e6594c;
+      transform: scale(1.03);
     }
     .cocktail {
-      margin-bottom: 1rem;
-      border-bottom: 1px solid #ccc;
+      margin-bottom: 1.5rem;
+      border-bottom: 1px dashed #ccc;
       padding-bottom: 1rem;
     }
     .cocktail img {
       max-width: 100%;
       margin-top: 0.5rem;
-      border-radius: 10px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
     .btn-row {
       display: flex;
+      flex-wrap: wrap;
       gap: 10px;
-      margin-top: 0.5rem;
+      margin-top: 0.8rem;
+    }
+    .btn-row button {
+      flex: 1;
     }
     .flashcard {
       text-align: center;
       margin-top: 1rem;
+      background-color: #fffbe6;
+      border-radius: 12px;
+      padding: 1rem;
+      animation: fadeIn 0.5s ease-in;
+    }
+    .flashcard h3 {
+      color: var(--accent-color);
+      font-size: 1.6rem;
+      margin-bottom: 0.5rem;
+    }
+    .flashcard-emoji {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      animation: bounce 1s infinite;
+    }
+    .flashcard img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin: 1rem 0;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    .flashcard-section button,
+    .quiz-section button {
+      font-size: 1.1rem;
+    }
+    #quizFeedback,
+    #flashcardReveal {
+      background-color: #fff3e0;
+      border-left: 5px solid var(--accent-color);
+      margin-top: 1rem;
+      padding: 1rem;
+      border-radius: 10px;
+    }
+    @keyframes bounce {
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-5px);
+      }
+    }
+    @keyframes popIn {
+      0% {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
     }
     @media (max-width: 600px) {
       body {
-        margin: 0.5rem;
+        padding: 0.5rem;
       }
     }
   </style>
-</head>
-<body>
-  <h1>Mon Carnet de Cocktails</h1>
-
-  <form id="cocktailForm">
-    <label for="name">Nom du Cocktail :</label>
-    <input type="text" id="name" required>
-
-    <label for="ingredients">Ingrédients :</label>
-    <textarea id="ingredients" required></textarea>
-
-    <label for="instructions">Instructions :</label>
-    <textarea id="instructions" required></textarea>
-
-    <label for="image">Lien de l'image (optionnel) :</label>
-    <input type="url" id="image">
-
-    <input type="hidden" id="editIndex">
-    <button type="submit">Enregistrer</button>
-  </form>
-
-  <div class="progress-section" id="progress"></div>
-
-  <div class="cocktail-list" id="cocktailList"></div>
-
-  <div class="quiz-section">
-    <h2>🎲 Quiz Cocktail</h2>
-    <button onclick="startQuiz()">Lancer un quiz</button>
-    <div id="quizArea" style="margin-top:1rem;"></div>
-  </div>
-
-  <div class="flashcard-section">
-    <h2>🧠 Entraînement Flashcard</h2>
-    <button onclick="startFlashcard()">Démarrer</button>
-    <div class="flashcard" id="flashcardArea"></div>
-  </div>
-
   <script>
-    const form = document.getElementById('cocktailForm');
-    const list = document.getElementById('cocktailList');
-    const quizArea = document.getElementById('quizArea');
-    const progressDiv = document.getElementById('progress');
-    const flashcardArea = document.getElementById('flashcardArea');
+    // Tes cocktails de base — tu peux les modifier ou ajouter via UI plus tard
+    const cocktails = [
+      {
+        name: 'Margarita',
+        ingredients: '50 ml Tequila\n25 ml Triple sec\n25 ml Jus de citron vert',
+        image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/MargaritaReal.jpg/320px-MargaritaReal.jpg',
+        knownCount: 0,
+        unknownCount: 0,
+      },
+      {
+        name: 'Mojito',
+        ingredients: '50 ml Rhum blanc\n30 ml Jus de citron vert\n2 cuillères à café de sucre\nFeuilles de menthe\nEau gazeuse',
+        image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Mojito-01.jpg/320px-Mojito-01.jpg',
+        knownCount: 0,
+        unknownCount: 0,
+      },
+      // Ajoute tes cocktails ici
+    ];
 
-    function loadCocktails() {
-      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-      const known = JSON.parse(localStorage.getItem('knownRecipes')) || {};
-      list.innerHTML = '';
+    let shuffledCocktails = [];
+    let flashcardIndex = 0;
 
-      cocktails.forEach((cocktail, index) => {
-        const div = document.createElement('div');
-        div.className = 'cocktail';
-        div.innerHTML = `
-          <h3>${cocktail.name}</h3>
-          ${cocktail.image ? `<img src="${cocktail.image}" alt="${cocktail.name}">` : ''}
-          <p><strong>Ingrédients :</strong><br>${cocktail.ingredients.replace(/\n/g, '<br>')}</p>
-          <p><strong>Instructions :</strong><br>${cocktail.instructions.replace(/\n/g, '<br>')}</p>
-          <div class="btn-row">
-            <button onclick="editCocktail(${index})">Modifier</button>
-            <button onclick="markAsKnown(${index})">${known[index] ? '✅ Connue' : 'Je connais'}</button>
+    function shuffleArray(arr) {
+      for (let i = arr.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+      }
+    }
+
+    function showFlashcard() {
+      const c = shuffledCocktails[flashcardIndex];
+      flashcardArea.innerHTML = `
+        <div class="flashcard">
+          <div class="flashcard-emoji">🤔</div>
+          <h3>${c.name}</h3>
+          ${c.image ? `<img src="${c.image}" alt="${c.name}">` : ''}
+          <button onclick="revealFlashcard('${c.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Afficher les ingrédients</button>
+          <div id="flashcardReveal"></div>
+          <div style="margin-top:1rem;">
+            <button onclick="nextFlashcard(true)">✅ Je connaissais</button>
+            <button onclick="nextFlashcard(false)">❌ Je ne connaissais pas</button>
           </div>
-        `;
-        list.appendChild(div);
-      });
+        </div>
+      `;
+      document.getElementById('quizFeedback').innerHTML = '';
+    }
 
+    function revealFlashcard(text) {
+      document.getElementById('flashcardReveal').textContent = text;
+    }
+
+    function nextFlashcard(known) {
+      const c = shuffledCocktails[flashcardIndex];
+      if (known) c.knownCount++;
+      else c.unknownCount++;
+
+      flashcardIndex++;
+      if (flashcardIndex >= shuffledCocktails.length) {
+        alert('Fin du quiz ! Tu peux rejouer ou ajouter des cocktails.');
+        flashcardIndex = 0;
+        shuffleArray(shuffledCocktails);
+      }
+      showFlashcard();
       updateProgress();
     }
 
     function updateProgress() {
-      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-      const known = JSON.parse(localStorage.getItem('knownRecipes')) || {};
       const total = cocktails.length;
-      const knownCount = Object.values(known).filter(Boolean).length;
-      const percent = total ? Math.round((knownCount / total) * 100) : 0;
-      progressDiv.innerHTML = `<h2>📊 Progression : ${knownCount} / ${total} cocktails connus (${percent}%)</h2>`;
-    }
-
-    function markAsKnown(index) {
-      const known = JSON.parse(localStorage.getItem('knownRecipes')) || {};
-      known[index] = !known[index];
-      localStorage.setItem('knownRecipes', JSON.stringify(known));
-      loadCocktails();
-    }
-
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const name = document.getElementById('name').value.trim();
-      const ingredients = document.getElementById('ingredients').value.trim();
-      const instructions = document.getElementById('instructions').value.trim();
-      const image = document.getElementById('image').value.trim();
-      const editIndex = document.getElementById('editIndex').value;
-
-      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-
-      const newCocktail = { name, ingredients, instructions, image };
-
-      if (editIndex) {
-        cocktails[editIndex] = newCocktail;
-        document.getElementById('editIndex').value = '';
-      } else {
-        cocktails.push(newCocktail);
+      let knownTotal = 0;
+      for (const c of cocktails) {
+        knownTotal += c.knownCount;
       }
-
-      localStorage.setItem('cocktails', JSON.stringify(cocktails));
-      form.reset();
-      loadCocktails();
-    });
-
-    function editCocktail(index) {
-      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-      const c = cocktails[index];
-      document.getElementById('name').value = c.name;
-      document.getElementById('ingredients').value = c.ingredients;
-      document.getElementById('instructions').value = c.instructions;
-      document.getElementById('image').value = c.image || '';
-      document.getElementById('editIndex').value = index;
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+      progressArea.textContent = `Cocktails connus : ${knownTotal} / ${total}`;
     }
 
-    function startQuiz() {
-      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-      if (cocktails.length === 0) {
-        quizArea.innerHTML = '<p>Aucun cocktail enregistré.</p>';
-        return;
-      }
-      const randomIndex = Math.floor(Math.random() * cocktails.length);
-      const cocktail = cocktails[randomIndex];
-      quizArea.innerHTML = `
-        <h3>Quels sont les ingrédients du <strong>${cocktail.name}</strong> ?</h3>
-        <textarea id="quizAnswer" rows="4" placeholder="Écris ta réponse ici..."></textarea>
-        <button onclick="checkQuiz('${cocktail.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Voir la réponse</button>
-        <div id="quizFeedback" style="margin-top:1rem;"></div>
-      `;
-    }
+    window.onload = () => {
+      shuffledCocktails = [...cocktails];
+      shuffleArray(shuffledCocktails);
 
-    function checkQuiz(correctAnswer) {
-      const userAnswer = document.getElementById('quizAnswer').value.trim();
-      const feedback = document.getElementById('quizFeedback');
-      feedback.innerHTML = `
-        <p><strong>Ta réponse :</strong><br>${userAnswer.replace(/\n/g, '<br>')}</p>
-        <p><strong>Bonne réponse :</strong><br>${correctAnswer.replace(/\n/g, '<br>')}</p>
-      `;
-    }
+      flashcardArea = document.getElementById('flashcardArea');
+      progressArea = document.getElementById('progressArea');
 
-    let flashcardIndex = 0;
-    function startFlashcard() {
-      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-      if (cocktails.length === 0) {
-        flashcardArea.innerHTML = '<p>Aucun cocktail enregistré.</p>';
-        return;
-      }
-      flashcardIndex = 0;
-      showFlashcard(cocktails);
-    }
-
-    function showFlashcard(cocktails) {
-      const c = cocktails[flashcardIndex];
-      flashcardArea.innerHTML = `
-        <h3>${c.name}</h3>
-        <button onclick="revealFlashcard('${c.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Afficher les ingrédients</button>
-        <div id="flashcardReveal"></div>
-        <div style="margin-top:1rem;">
-          <button onclick="nextFlashcard(${cocktails.length}, true)">✅ Je connaissais</button>
-          <button onclick="nextFlashcard(${cocktails.length}, false)">❌ Je ne connaissais pas</button>
-        </div>
-      `;
-    }
-
-    function revealFlashcard(ingredients) {
-      document.getElementById('flashcardReveal').innerHTML = `<p>${ingredients.replace(/\n/g, '<br>')}</p>`;
-    }
-
-    function nextFlashcard(total, known) {
-      const knownFlash = JSON.parse(localStorage.getItem('flashcardResults')) || { correct: 0, total: 0 };
-      knownFlash.total++;
-      if (known) knownFlash.correct++;
-      localStorage.setItem('flashcardResults', JSON.stringify(knownFlash));
-      const cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-      flashcardIndex++;
-      if (flashcardIndex >= total) {
-        flashcardArea.innerHTML = `<p>✅ ${knownFlash.correct} sur ${knownFlash.total} réponses correctes</p>`;
-      } else {
-        showFlashcard(cocktails);
-      }
-    }
-
-    loadCocktails();
+      showFlashcard();
+      updateProgress();
+    };
   </script>
+</head>
+<body>
+  <h1>🍸 Mon Carnet de Cocktails</h1>
+
+  <section class="flashcard-section">
+    <div id="flashcardArea"></div>
+    <div id="quizFeedback"></div>
+  </section>
+
+  <section class="progress-section">
+    <div id="progressArea"></div>
+  </section>
 </body>
 </html>
