--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     padding-bottom: 1rem;
     border-bottom: 1px dashed #ccc;
     position: relative;
+    padding-right: 90px; /* <-- ajouté pour laisser de la place au bouton */
   }
   .cocktail img {
     max-width: 100%;
@@ -89,6 +90,7 @@
     cursor: pointer;
     font-size: 0.85rem;
     transition: background-color 0.3s;
+    white-space: nowrap; /* évite le retour à la ligne */
   }
   .edit-btn:hover {
     background-color: #f0c040;
