--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>🍸 Carnet & Quiz Cocktails</title>
 <style>
+  /* même style qu'avant, inchangé pour préserver l’apparence */
   :root {
     --main-color: #ff6f61;
     --accent-color: #ffd166;
@@ -64,8 +65,6 @@
     background-color: #e6594c;
     transform: scale(1.03);
   }
-
-  /* Nouveau layout pour cocktail */
   .cocktail {
     display: flex;
     justify-content: space-between;
@@ -107,7 +106,6 @@
   .edit-btn:hover {
     background-color: #f0c040;
   }
-
   .flashcard {
     text-align: center;
     background-color: #fffbe6;
@@ -147,6 +145,26 @@
   .btn-row button {
     flex: 1;
   }
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-content {
+    background: white;
+    padding: 2rem;
+    border-radius: 12px;
+    text-align: center;
+    max-width: 400px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+  }
   @keyframes bounce {
     0%, 100% { transform: translateY(0); }
     50% { transform: translateY(-5px); }
@@ -159,220 +177,141 @@
     from { opacity: 0; }
     to { opacity: 1; }
   }
-  @media (max-width: 600px) {
-    body {
-      padding: 0.5rem;
-    }
-    .btn-row {
-      flex-direction: column;
-    }
-  }
 </style>
 </head>
 <body>
-
 <h1>🍸 Carnet & Quiz Cocktails</h1>
-
 <section class="cocktail-list">
-  <h2>Répertoire des cocktails</h2>
-  <div id="cocktailList"></div>
-
-  <h3 id="formTitle">Ajouter un nouveau cocktail</h3>
-  <form id="cocktailForm">
-    <label for="name">Nom du cocktail :</label>
-    <input type="text" id="name" required />
-
-    <label for="ingredients">Ingrédients (séparés par des sauts de ligne) :</label>
-    <textarea id="ingredients" rows="4" required></textarea>
-
-    <label for="image">URL de l'image (optionnel) :</label>
-    <input type="url" id="image" placeholder="https://example.com/image.jpg" />
-
-    <button type="submit">Ajouter / Modifier</button>
-    <button type="button" id="cancelEditBtn" style="display:none; margin-top:0.5rem; background:#ccc; color:#333;">Annuler la modification</button>
+  <h2>📋 Recettes enregistrées</h2>
+  <div id="cocktailDisplay"></div>
+</section>
+<section class="cocktail-form">
+  <h2>➕ Ajouter / Modifier un cocktail</h2>
+  <form onsubmit="addCocktail(event)">
+    <label for="name">Nom</label>
+    <input id="name" required />
+    <label for="ingredients">Ingrédients</label>
+    <textarea id="ingredients" required></textarea>
+    <label for="image">URL de la photo (optionnel)</label>
+    <input id="image" />
+    <button type="submit">💾 Sauvegarder</button>
   </form>
 </section>
-
 <section class="flashcard-section">
-  <h2>Flashcards - Teste ta mémoire !</h2>
+  <h2>🧠 Entraînement (Flashcards)</h2>
   <div id="flashcardArea"></div>
-  <div id="quizFeedback"></div>
-  <div class="btn-row">
-    <button id="prevFlashcardBtn">⬅️ Précédent</button>
-    <button id="nextFlashcardBtn">➡️ Suivant</button>
-    <button id="restartFlashcardBtn">🔄 Recommencer</button>
+</section>
+<div id="quizModal" class="modal">
+  <div class="modal-content">
+    <h3>Résultat du quiz</h3>
+    <p id="quizResultText"></p>
+    <button onclick="restartFullQuiz()">🔁 Rejouer tous</button>
+    <button onclick="restartFailedOnly()">🎯 Revoir seulement les erreurs</button>
   </div>
-</section>
-
-<section class="progress-section">
-  <h2>Progression</h2>
-  <div id="progressArea"></div>
-</section>
-
+</div>
 <script>
-  let cocktails = JSON.parse(localStorage.getItem('cocktails')) || [];
-
-  let shuffledCocktails = [];
-  let flashcardIndex = 0;
-  let editingIndex = null;
-
-  const cocktailListDiv = document.getElementById('cocktailList');
-  const flashcardArea = document.getElementById('flashcardArea');
-  const progressArea = document.getElementById('progressArea');
-  const quizFeedback = document.getElementById('quizFeedback');
-  const cocktailForm = document.getElementById('cocktailForm');
-  const formTitle = document.getElementById('formTitle');
-  const cancelEditBtn = document.getElementById('cancelEditBtn');
-
-  function saveCocktails() {
-    localStorage.setItem('cocktails', JSON.stringify(cocktails));
-  }
-
-  function renderCocktailList() {
-    cocktailListDiv.innerHTML = '';
-    if(cocktails.length === 0){
-      cocktailListDiv.innerHTML = '<p>Aucun cocktail ajouté pour le moment.</p>';
-      return;
-    }
-    cocktails.forEach((c, i) => {
-      const div = document.createElement('div');
-      div.className = 'cocktail';
-      div.innerHTML = `
-        <div class="cocktail-content">
-          <strong>${c.name}</strong>
-          <p style="white-space: pre-wrap; margin-top: 0.3rem;">${c.ingredients}</p>
-          ${c.image ? `<img src="${c.image}" alt="${c.name}">` : ''}
-        </div>
-        <button class="edit-btn" onclick="editCocktail(${i})">Modifier</button>
-      `;
-      cocktailListDiv.appendChild(div);
-    });
-  }
-
-  function editCocktail(index) {
-    editingIndex = index;
-    const c = cocktails[index];
-    document.getElementById('name').value = c.name;
-    document.getElementById('ingredients').value = c.ingredients;
-    document.getElementById('image').value = c.image || '';
-    formTitle.textContent = `Modifier le cocktail "${c.name}"`;
-    cancelEditBtn.style.display = 'inline-block';
-    window.scrollTo({top:0, behavior:'smooth'});
-  }
-
-  cancelEditBtn.onclick = () => {
-    resetForm();
-  };
-
-  function resetForm() {
+let cocktails = JSON.parse(localStorage.getItem("cocktails")) || [];
+let editingIndex = null;
+function saveCocktails() {
+  localStorage.setItem("cocktails", JSON.stringify(cocktails));
+  displayCocktails();
+}
+function addCocktail(e) {
+  e.preventDefault();
+  const name = document.getElementById("name").value.trim();
+  const ingredients = document.getElementById("ingredients").value.trim();
+  const image = document.getElementById("image").value.trim();
+  if (editingIndex !== null) {
+    cocktails[editingIndex] = { name, ingredients, image };
     editingIndex = null;
-    cocktailForm.reset();
-    formTitle.textContent = 'Ajouter un nouveau cocktail';
-    cancelEditBtn.style.display = 'none';
+  } else {
+    cocktails.push({ name, ingredients, image });
   }
-
-  cocktailForm.onsubmit = function(event){
-    event.preventDefault();
-    const name = document.getElementById('name').value.trim();
-    const ingredients = document.getElementById('ingredients').value.trim();
-    const image = document.getElementById('image').value.trim();
-    if(!name || !ingredients) return alert("Nom et ingrédients obligatoires");
-
-    if(editingIndex !== null){
-      cocktails[editingIndex] = {...cocktails[editingIndex], name, ingredients, image};
-    } else {
-      cocktails.push({name, ingredients, image, knownCount: 0, unknownCount: 0});
-    }
-    saveCocktails();
-    renderCocktailList();
-    resetForm();
-    shuffleAndStartFlashcards();
-  };
-
-  function shuffleArray(arr) {
-    for(let i=arr.length-1; i>0; i--){
-      const j = Math.floor(Math.random() * (i+1));
-      [arr[i], arr[j]] = [arr[j], arr[i]];
-    }
-  }
-
-  function shuffleAndStartFlashcards(){
-    shuffledCocktails = cocktails.filter(c => c.name).slice();
-    shuffleArray(shuffledCocktails);
-    flashcardIndex = 0;
-    showFlashcard();
-    updateProgress();
-    quizFeedback.textContent = '';
-  }
-
-  function showFlashcard(){
-    if(shuffledCocktails.length === 0){
-      flashcardArea.innerHTML = '<p>Aucun cocktail à afficher.</p>';
-      return;
-    }
-    const c = shuffledCocktails[flashcardIndex];
-    flashcardArea.innerHTML = `
-      <div class="flashcard">
-        <div class="flashcard-emoji">🤔</div>
-        <h3>${c.name}</h3>
-        ${c.image ? `<img src="${c.image}" alt="${c.name}">` : ''}
-        <button onclick="revealFlashcard('${c.ingredients.replace(/'/g, "\\'").replace(/\n/g, '\\n')}')">Afficher les ingrédients</button>
-        <div id="flashcardReveal"></div>
-        <div style="margin-top:1rem;" class="btn-row">
-          <button onclick="nextFlashcard(true)">✅ Je connaissais</button>
-          <button onclick="nextFlashcard(false)">❌ Je ne connaissais pas</button>
-        </div>
+  e.target.reset();
+  saveCocktails();
+}
+function displayCocktails() {
+  const display = document.getElementById("cocktailDisplay");
+  display.innerHTML = cocktails.map((c, i) => `
+    <div class="cocktail">
+      <div class="cocktail-content">
+        <strong>${c.name}</strong>
+        <p>${c.ingredients.replace(/\n/g, "<br>")}</p>
+        ${c.image ? `<img src="${c.image}" alt="${c.name}">` : ""}
       </div>
-    `;
+      <button class="edit-btn" onclick="editCocktail(${i})">✏️ Modifier</button>
+    </div>`
+  ).join("");
+}
+function editCocktail(index) {
+  const c = cocktails[index];
+  document.getElementById("name").value = c.name;
+  document.getElementById("ingredients").value = c.ingredients;
+  document.getElementById("image").value = c.image || "";
+  editingIndex = index;
+  window.scrollTo({ top: 0, behavior: "smooth" });
+}
+let shuffledCocktails = [], flashcardIndex = 0, sessionResults = [];
+function shuffle(arr) {
+  for (let i = arr.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [arr[i], arr[j]] = [arr[j], arr[i]];
   }
-
-  function revealFlashcard(text){
-    document.getElementById('flashcardReveal').textContent = text;
+  return arr;
+}
+function startQuiz() {
+  shuffledCocktails = shuffle([...cocktails]);
+  flashcardIndex = 0;
+  sessionResults = [];
+  showFlashcard();
+}
+function showFlashcard() {
+  if (flashcardIndex >= shuffledCocktails.length) {
+    endQuiz();
+    return;
   }
-
-  function nextFlashcard(known){
-    const c = shuffledCocktails[flashcardIndex];
-    if(known) c.knownCount = (c.knownCount || 0) + 1;
-    else c.unknownCount = (c.unknownCount || 0) + 1;
-    saveCocktails();
-    flashcardIndex++;
-    if(flashcardIndex >= shuffledCocktails.length){
-      quizFeedback.textContent = '🎉 Fin du quiz ! Clique sur Recommencer pour refaire.';
-      flashcardIndex = shuffledCocktails.length -1;
-      return;
-    }
-    showFlashcard();
-    updateProgress();
-  }
-
-  function updateProgress(){
-    if(cocktails.length === 0){
-      progressArea.textContent = '';
-      return;
-    }
-    const totalKnown = cocktails.reduce((sum,c)=>sum+(c.knownCount||0),0);
-    progressArea.textContent = `Cocktails connus (validations positives) : ${totalKnown} / ${cocktails.length}`;
-  }
-
-  document.getElementById('nextFlashcardBtn').onclick = () => {
-    flashcardIndex++;
-    if(flashcardIndex >= shuffledCocktails.length) flashcardIndex = 0;
-    showFlashcard();
-  };
-
-  document.getElementById('prevFlashcardBtn').onclick = () => {
-    flashcardIndex--;
-    if(flashcardIndex < 0) flashcardIndex = shuffledCocktails.length - 1;
-    showFlashcard();
-  };
-
-  document.getElementById('restartFlashcardBtn').onclick = () => {
-    shuffleAndStartFlashcards();
-  };
-
-  renderCocktailList();
-  shuffleAndStartFlashcards();
+  const c = shuffledCocktails[flashcardIndex];
+  document.getElementById("flashcardArea").innerHTML = `
+    <div class="flashcard">
+      <div class="flashcard-emoji">🤔</div>
+      <h3>${c.name}</h3>
+      ${c.image ? `<img src="${c.image}" alt="${c.name}" />` : ""}
+      <button onclick="revealFlashcard('${c.ingredients.replace(/'/g, "\\'").replace(/\n/g, '<br>')}')">Afficher les ingrédients</button>
+      <div id="flashcardReveal"></div>
+      <div class="btn-row">
+        <button onclick="recordResult(true)">✅ Je connaissais</button>
+        <button onclick="recordResult(false)">❌ Je ne connaissais pas</button>
+      </div>
+    </div>`;
+}
+function revealFlashcard(text) {
+  document.getElementById("flashcardReveal").innerHTML = `<p>${text}</p>`;
+}
+function recordResult(known) {
+  sessionResults.push({ index: flashcardIndex, known });
+  flashcardIndex++;
+  showFlashcard();
+}
+function endQuiz() {
+  const correct = sessionResults.filter(r => r.known).length;
+  const total = sessionResults.length;
+  document.getElementById("quizResultText").textContent = `${correct} bonnes réponses sur ${total}`;
+  document.getElementById("quizModal").style.display = "flex";
+}
+function restartFullQuiz() {
+  document.getElementById("quizModal").style.display = "none";
+  startQuiz();
+}
+function restartFailedOnly() {
+  const failedIndexes = sessionResults.filter(r => !r.known).map(r => r.index);
+  shuffledCocktails = failedIndexes.map(i => shuffledCocktails[i]);
+  flashcardIndex = 0;
+  sessionResults = [];
+  document.getElementById("quizModal").style.display = "none";
+  showFlashcard();
+}
+displayCocktails();
+startQuiz();
 </script>
-
 </body>
 </html>
